--- a/My_DjangoProjects/movie_proj/movie_app/templates/movie_app/one_movie.html
+++ b/My_DjangoProjects/movie_proj/movie_app/templates/movie_app/one_movie.html
@@ -9,4 +9,16 @@
 {% block content %}
 <h1>Фільм {{ movie.name }}</h1>
      <h2> {{ movie.name }}, рейтинг - {{ movie.rating }}, рік - {{ movie.year | default:"Невизачений" }}</h2>
+<hr>
+<h3>Інформація про режисера</h3>
+<h3>Імя - {{ movie.director.first_name }}</h3>
+<h3>Фамілія - {{ movie.director.last_name }}</h3>
+<h3>E-mail - {{ movie.director.director_email }}</h3>
+<hr>
+<h3>Інформація про акторів</h3>
+<ul>
+     {% for actor in movie.actors.all %}
+          <li> {{ actor }} </li>
+     {% endfor %}
+</ul>
 {% endblock %}
